WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279031
window.open with noopener shouldn't create page in opener process
https://bugs.webkit.org/show_bug.cgi?id=279031
Summary
window.open with noopener shouldn't create page in opener process
Alex Christensen
Reported
2024-09-02 11:55:49 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-09-02 12:01:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33039
Radar WebKit Bug Importer
Comment 2
2024-09-06 13:41:50 PDT
<
rdar://problem/135438724
>
EWS
Comment 3
2024-10-16 22:56:40 PDT
Committed
285310@main
(9fcc0a6c7237): <
https://commits.webkit.org/285310@main
> Reviewed commits have been landed. Closing PR #33039 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug